--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             crossorigin="anonymous"
         />
 
-        <title>Hello, world!</title>
+        <title>슬라임을 잡은지 300년 모르는 사이에 레벨 max가 되었습니다</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="shortcut icon" href="img/favicon (3).ico" type="image/x-icon" />
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light nav-distance">
